ros2_ws/log/build_2023-06-20_18-58-45/kalbot_controller/stderr.log
  File "/home/alibaba/ros2_repos/install/kalbot_controller/lib/python3.6/site-packages/kalbot_controller/kalbot_controller.py", line 2
    import rclpy.node import Node
                           ^
SyntaxError: invalid syntax

